# operating_system-posix

./: .gitignore  _.cmake  __.cmake  _default_gtk_based_windowing.cmake  _default_gtk_windowing.cmake  _default_posix_windowing.cmake  _desktop.cmake  _gtk_based.cmake  _gtk_based_desktop.cmake  _gtk_desktop.cmake  _kde_desktop.cmake  _lxq_desktop.cmake  _lxqt_desktop.cmake
accessibility_gtk4/: CMakeLists.txt  PORTING_NOTES.md  README.md  _.cpp  _.h  _factory.cpp  accessibility.cpp  accessibility.h  application.cpp  application.h  gtk_accessible.cpp  gtk_accessible.h  main_window.cpp  main_window.h  process_control.cpp  process_control.h
acme_posix/: CMakeLists.txt  Makefile  _.cpp  _.h  _acme_posix.h  _acme_posix.vcxproj  _dependencies.txt  _dependencies.txt.h  _factory.cpp  _library.h  _posix.cpp  _process.cpp  aa_process.2cpp  aaa_file_lock.cpp  aaa_process.cpp  aaa_serial.cpp  aaa_serial.h  aaa_stdio_file.cpp  aaa_stdio_file.h  acme_dir.cpp  acme_dir.h  acme_directory.cpp  acme_directory.h  acme_file.cpp  acme_file.h  acme_path.cpp  acme_path.h  acme_posix.cbp  acme_posix.h.cpp  acme_posix.vcxproj  acme_posix.vcxproj.filters  cmake_install.cmake  dbus.cpp  deployment.rc  dir_context.cpp  dir_context.h  directory_context.cpp  directory_context.h  directory_system.cpp  directory_system.h  (+44 more)
acme_windowing_gtk4/: CMakeLists.txt  SubclassedModelButton.h  _.h  _factory.cpp  _gtk4.h  _references.txt  aaa_display_base.cpp  aaa_display_base.h  aaa_gdk_gdk.cpp  check_gl_support.cpp  deployment.rc  display.cpp  display.h  display_base.cpp  display_base.h  gdk_gdk.cpp  gtk4.cpp  window.cpp  window.h  windowing.cpp  windowing.h  would_likely_create_gl_context.cpp
acme_windowing_q/: CMakeLists.txt  QCustomTopWindow.cpp  QCustomTopWindow.h  aaa_gdk_3_and_4.cpp  aaa_gdk_3_and_4.h  deployment.rc  display.cpp  display.h  micro_window.cpp  q_5_and_6.cpp  q_5_and_6.h  window.cpp  window.h  windowing.cpp  windowing.h
acme_windowing_x11/: CMakeLists.txt  _.cpp  _.h  _atom.cpp  _atom.h  _factory.cpp  _x11.h  deployment.rc  display.cpp  display.h  display_lock.cpp  display_lock.h  happening_listener.cpp  happening_listener.h  keyboard.h  system.cpp  window.cpp  window.h  window_base.cpp  window_base_handle.h  windowing.cpp  windowing.h  windowing_system.cpp  windowing_system.h
apex_posix/: CMakeLists.txt  Makefile  _.cpp  _.h  _apex_posix.h  _factory.cpp  _references.txt  aaa__library.h  aaa_datetime.cpp  aaa_datetime.h  aaa_os_context.cpp  aaa_os_context.h  aaa_user.cpp  apex_posix.cbp  cmake_install.cmake  datetime.cpp  datetime.h  deployment.rc  factory_exchange.cpp  file_context.cpp  file_context.h  framework.cpp  framework.h  node.cpp  node.h  nord_apex_posix.vcxproj  nord_apex_posix.vcxproj.filters  os_context.cpp  os_context.h  process.cpp  system_color.cpp  system_time.cpp  user.cpp
audio_alsa/: CMakeLists.txt  Makefile  _.h  _audio_alsa.h  _factory.cpp  aaa__library.h  aaa_want_to_remove_audio_mmsystem_command.h  audio_alsa.cbp  cmake_install.cmake  deployment.rc  framework.h  snd_pcm.cpp  snd_pcm.h  translation.cpp  translation.h  wave_in.cpp  wave_in.h  wave_out.cpp  wave_out.h
audio_sndio/: CMakeLists (copy 1).txt  CMakeLists.txt  _.h  _factory.cpp  aaa_cmus_sndio.h  aaa_factory_exchange.h  audio_sndio.cbp  audio_sndio.cpp  audio_sndio.h  cmus_sndio.cpp  cmus_sndio.h  deployment.rc  snd_pcm.cpp  snd_pcm.h  timo_mixer.h  timo_output_plugin.cpp  timo_output_plugin.h  timo_sample_format.h  translation.cpp  translation.h  wave_in.cpp  wave_in.h  wave_out.cpp  wave_out.h
aura_posix/: .node.cpp.kate-swp  CMakeLists.txt  Makefile  _.cpp  _.h  _aura_posix.h  _factory.cpp  _library.h  _references.txt  _x11.h  aaa__library.h  aaa_application.cpp  aaa_application.h  aaa_user.cpp  appindicator.cpp  appindicator.h  aura_posix.cbp  clipboard_data.h  cmake_install.cmake  deployment.rc  display_lock.cpp  display_lock.h  factory_exchange.cpp  factory_exchange.h  framework.cpp  framework.h  input.h  keyboard.cpp  keyboard.h  node.cpp  node.h  nord_aura_posix.vcxproj  nord_aura_posix.vcxproj.filters  shell.cpp  shell.h  user.h  user_notify_icon_bridge.h  window.cpp  window.h  x_window.cpp  (+6 more)
common_kde/: CMakeLists.txt  kde_5_and_6.cpp  kde_5_and_6.h
innate_ui_kde5/: CMakeLists.txt  _.h  _innate_ui_win32_vs12.vcxproj  aaa__library.h  aaa_argcargv.cpp  aaa_bbb_filesystem_file.cpp  aaa_callstack.cpp  aaa_dir.cpp  aaa_environment_variable.cpp  aaa_environment_variable.h  aaa_extract_icon.cpp  aaa_factory_exchange (2).cpp  aaa_file_exception.cpp  aaa_main.cpp  aaa_shell1.h  aaa_stdio_file.h  aaa_want_to_remove_printer (2).cpp  aaa_want_to_remove_shell1 (2).cpp  aaa_windowing.h  bbb_callstack.cpp  bbb_callstack.h  button.cpp  deployment.rc  dialog.cpp  dialog.h  icon.cpp  icon.h  innate_ui.cpp  innate_ui.h  innate_ui_win32.vcxproj  resource.h  still.cpp  window.cpp  window.h
music_midi_alsa/: CMakeLists.txt  _.cpp  _.h  _factory.cpp  _music_midi_alsa.h  aaa__library.h  aaa_factory_exchange.h  aaa_want_to_remove_music_midi_alsa_file.cpp  aaa_want_to_remove_music_midi_alsa_sequence.cpp  aaa_want_to_remove_music_midi_alsa_sequence.h  aaa_want_to_remove_music_midi_alsa_sequence_thread.cpp  aaa_want_to_remove_music_midi_alsa_sequence_thread.h  deployment.rc  factory_exchange.cpp  framework.h  message_out.cpp  message_out.h  midi.cpp  midi.h  music_midi_alsa.cbp  music_midi_alsa_file.h  out.cpp  out.h  seqlib.cpp  seqlib.h  seqmidi.cpp  seqpriv.h  translation.cpp  translation.h
nano_dynamic_library_dl/: CMakeLists.txt  _.h  _factory.cpp  deployment.rc  dynamic_library.h  framework.cpp  nano_dynamic_library_dl.cpp  nano_dynamic_library_dl.h
nano_user_xcb/: CMakeLists.txt  _.h  _factory.cpp  _references.txt  _user.cpp  deployment.rc  display.cpp  display.h  user.cpp  user.h  window.cpp  window.h
node_gnome/: CMakeLists.txt  _.cpp  _.h  _constant.h  _factory.cpp  _library.h  _node_gnome.h  _references.txt  aaa__library.h  aaa_application.cpp  aaa_copydesk.cpp  aaa_display.cpp  aaa_display.h  aaa_gdk.cpp  aaa_gdk.h  aaa_gnome_direct.cpp  aaa_gnome_gnome.h  aaa_gnome_internal_glue.h  aaa_gnome_shared.h  (+34 more)
(+2871 files in other folders)
